@@ -116,3 +116,7 @@ FIND_PATH(JPEG2000_CONFORMANCE_DATA_ROOT testimages.html
   $ENV{JPEG2000_CONFORMANCE_DATA_ROOT}
 )
 
+IF(CMAKE_COMPILER_IS_GNUCC)
+  SET(CMAKE_WARN_FLAGS "-Wall")
+  SET(CMAKE_C_FLAGS "${CMAKE_WARN_FLAGS} -ffast-math -std=c99 ${CMAKE_C_FLAGS}")
+ENDIF(CMAKE_COMPILER_IS_GNUCC)
